--- a/PersonalWebsite2/HTML/css/jordan.less
+++ b/PersonalWebsite2/HTML/css/jordan.less
@@ -1047,6 +1047,12 @@ section{
 		}
 	}
 
+	#mutual-fund-grid{
+		width: 66%;
+	}
+	#returnlySys-grid{
+		width: 66%;
+	}
 	&.section-portfolio{
 		position: relative;
 		overflow: hidden;
@@ -2055,7 +2061,7 @@ section{
 				}
 			}
 			.grid .grid-item{
-				width: 100%;
+				max-width: 100%;
 			}
 		}
 
