--- a/PersonalWebsite2/HTML/css/jordan.less
+++ b/PersonalWebsite2/HTML/css/jordan.less
@@ -35,7 +35,7 @@
 @sansSerifCondensed: 'Roboto', sans-serif;
 @serif: 'Merriweather', serif;
 
-@primaryColor: #54BABB;
+@primaryColor: #f4b642;
 @midGray: #999999;
 @darkGray: #4d4d4d;
 @lightGray: #e6e6e6;
